Finished most UI elements

--- a/homepage/src/styles/portfolio.css
+++ b/homepage/src/styles/portfolio.css
@@ -5,12 +5,7 @@
 
 .Sidebar {
     min-height: 100vh;
-    width: 200px;
-    background-color: var(--layer-2-bg);
-    color: var(--layer-2-fg);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    min-width: 10rem;
 }
 
 .Content {
