--- a/homepage/src/components/sidebar.css
+++ b/homepage/src/components/sidebar.css
@@ -5,7 +5,7 @@
     color: var(--layer-1-bg);
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .side ul{
