--- a/homepage/src/components/navbar.css
+++ b/homepage/src/components/navbar.css
@@ -1,10 +1,11 @@
 .nav {
     height: 100% ;
-    background-color: var(--layer-1-bg);
-    color: var(--layer-2-fg);
+    background-color: var(--navbar-bg);
+    color: var(--navbar-fg);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex: 0;
     gap: 2rem;
     padding: 0 1rem;
 }
@@ -14,6 +15,7 @@
     margin: 0;
     list-style: none;
     display: flex;
+    flex: 0;
     gap: 1rem;
 }
 
@@ -41,5 +43,11 @@
 }
 
 .author {
-    all: unset;
+    display: none;
+}
+
+@media screen and (min-width: 400px){
+    .author {
+        display: block;
+    }
 }
