added sample text to portfolio

--- a/homepage/src/styles/App.css
+++ b/homepage/src/styles/App.css
@@ -27,3 +27,11 @@
 .Footer {
   height: 10vh;
 }
+
+p {
+  color: var(--active-fg);
+  font-size: large;
+  font-weight: 500;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 2rem 5rem;
+}
